--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
     <title>Calculator Project</title>
 </head>
 <body>
+    <div class="main">
+        <div class="screen">
+
+        </div>
+        <div class="keys">
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+        </div>
+        <div class="keys">
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+        </div>
+        <div class="keys">
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+        </div>
+        <div class="keys">
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+            <div class="key-button"></div>
+        </div>
+    </div>
     
 </body>
 </html>
