--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
 
         </div>
         <div class="keys">
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
+            <div class="key-button">7</div>
+            <div class="key-button">4</div>
+            <div class="key-button">1</div>
+            <div class="key-button">0</div>
         </div>
         <div class="keys">
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
+            <div class="key-button">8</div>
+            <div class="key-button">5</div>
+            <div class="key-button">2</div>
+            <div class="key-button">clear</div>
         </div>
         <div class="keys">
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
+            <div class="key-button">9</div>
+            <div class="key-button">6</div>
+            <div class="key-button">3</div>
+            <div class="key-button">=</div>
         </div>
         <div class="keys">
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
-            <div class="key-button"></div>
+            <div class="key-button"><span>&#247;</span></div>
+            <div class="key-button">x</div>
+            <div class="key-button">-</div>
+            <div class="key-button">+</div>
         </div>
     </div>
     
